# GenesisEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.lua  premake5.lua
.github/workflows/: ci.yml
Dependencies/: fmt.lua  glfw.lua  spdlog.lua
Genesis/: CMakeLists.txt  GenesisClient.lua  GenesisCore.lua  GenesisEditor.lua  GenesisServer.lua
Genesis/src/GenesisClient/: CMakeLists.txt  Client.cpp  Client.h  Client.hpp  ClientApplication.cpp  ClientApplication.hpp  Defines.hpp  EntryPoint.hpp  KeyCode.hpp
Genesis/src/GenesisClient/event/: KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp  WindowEvent.hpp
Genesis/src/GenesisCore/: Application.cpp  Application.hpp  CMakeLists.txt  Core.cpp  Core.h  Core.hpp  Defines.hpp  Logger.cpp  Logger.hpp  Platform.h
Genesis/src/GenesisCore/event/: Event.hpp
Genesis/src/GenesisEditor/: CMakeLists.txt  Main.cpp  main.cpp
Genesis/src/GenesisServer/: CMakeLists.txt  Server.cpp  Server.hpp
Runtime/: CMakeLists.txt  RuntimeClient.lua  RuntimeCore.lua  RuntimeServer.lua
Runtime/src/RuntimeClient/: CMakeLists.txt  Main.cpp  main.cpp
Runtime/src/RuntimeCore/: Core.cpp  Core.hpp
Runtime/src/RuntimeServer/: CMakeLists.txt  Main.cpp  main.cpp
